--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Ocean theme</h1>
         </div>
 
-        <div class="section">
+        <div class="section center">
             <h2>Colours</h2>
             <div class="colour-container">
                 <div class="box" id="colour1"></div>
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <div class="section fonts">
+        <div class="section fonts center">
             <h2>Fonts</h2>
             <h3><u>Arial</u></h3>
             <p>The quick brown fox jumps over the lazy dog.</p>
@@ -47,7 +47,7 @@
             <p>THE QUICK BROWN FOX JUMPS OVER THE LAZY DOG.</p>
         </div>
 
-        <div class="section text">
+        <div class="section text center">
             <h2>Text Styles</h2>
             <h3>H1: Main page heading</h3>
             <ul>
